# 2019-2020-SECG4-Rainbow-Attack

./: .gitignore  CMakeLists.txt  Makefile_Windows  README.md  build.cmd
src/: config.h  hashing_thread.cpp  hashing_thread.h  help.cpp  help.h  infos.cpp  infos.h  main.cpp  sha256.cpp  sha256.hpp  synchronized_writer.cpp  synchronized_writer.hpp  utils.cpp  utils.h
tests/: tests.cpp
